# nestIQ_classification

./: README.md  data.py  evaluate.py  inference.py  main.py  model.py  pyproject.toml  requirements.txt  saved_model.pt  train.py
.streamlit/: config.toml
